# Context-Engineering-with-DSPy

./: .gitignore  README.md  pyproject.toml
1-Prompt_Engineering/: 1_atomic_prompts.ipynb  code.ipynb
2-MultiAgent_Interactions/: code.ipynb
3-Evaluation/: code.ipynb
4-Tool_Calls/: code.ipynb
5-RAG/: code.ipynb
