[project]
name = "Context-Engineering-with-DSPy"
version = "0.1.0"
description = "Context-Engineering with DSPy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annoy>=1.17.3",
    "dspy>=3.0.2",
    "google-genai>=1.31.0",
    "ipykernel>=6.30.1",
    "mlflow>=3.3.2",
    "openai>=1.101.0",
    "python-dotenv>=1.1.1",
    "tavily-python>=0.7.17",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
